# poems

./: .gitignore  1.0-summary-statistics-upvotes-and-awards.html  1.0-summary-statistics-upvotes-and-awards.ipynb  2.0-meter.ipynb  2.0-what-about-timmy.ipynb  3.0-meter.ipynb  3.0-metre-and-rhyme.ipynb  3.0-metre.ipynb  3.0-rhyme-and-metre.ipynb  3.0-what-about-timmy.ipynb  4.0-rhyme.ipynb  README.md  Untitled.ipynb  environment.yml  plot.html  plot.json  plot_10_most_upvotes_and_awards.json  plot_7_awards.json  plot_8_upvotes.json  pyproject.toml
notebooks/: 1.0-summary-statistics-upvotes-and-awards.ipynb  2.0-meter.ipynb  3.0-what-about-timmy.ipynb  4.0-rhyme.ipynb
src/: data.py  data_frame_parser.py  meter.py  metre.py  plotly.py  reddit_comment_reader.py  reddit_user_comment_reader.py  rhyme.py  string.py  utils.py
