[tool.poetry]
name = "poems"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
jupyter = "^1.0.0"
plotly = "^5.6.0"
nltk = "^3.7"
requests = "^2.27.1"
matplotlib = "^3.5.1"
ipython = "^8.2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
target-version = ['py39']
fast = true
exclude = '''
(
  /(
      \.hypothesis         # exclude a few common directories in the
    | \.git          # root of the project
    | \.pytest_cache
    | python-venv
    | \.venv
    | build
    | dist
  ))
'''